--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '14'
           cache: 'npm'
-          cache-dependency-path: ./api/package-lock.json
+          cache-dependency-path: api/package-lock.json
       - name: Install dependencies
         shell: bash
         run: npm ci
