ci: add e2e job with mongo service for examples/api

--- a/.github/workflows/api-ci.yml
+++ b/.github/workflows/api-ci.yml
@@ -27,3 +27,39 @@ jobs:
       - name: run unit tests
         shell: bash
         run: npm run test
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: unit-test
+    defaults:
+      run:
+        working-directory: ./examples/api
+    services:
+      mongo-e2e:
+        image: mongo:4.4
+        ports:
+          - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: test
+          MONGO_INITDB_ROOT_PASSWORD: test123
+        options: >-
+          --health-interval=10s --health-timeout=5s --health-retries=5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Wait for Mongo
+        run: |
+          for i in {1..30}; do
+            if nc -z mongo-e2e 27017; then echo "mongo up" && exit 0; fi
+            echo "waiting for mongo... ($i)"; sleep 1
+          done
+          exit 1
+      - name: Install dependencies
+        shell: bash
+        run: npm ci
+      - name: run e2e tests
+        shell: bash
+        env:
+          MONGO_DB_NAME: demo
+          MONGO_URL: mongodb://test:test123@mongo-e2e:27017?retryWrites=true&writeConcern=majority
+        run: npm run test:e2e
